--- a/profapp/static/css/style.less
+++ b/profapp/static/css/style.less
@@ -110,6 +110,11 @@ body {
   border-radius: 3px;
 }
 
+.border-none {
+  border: none;
+  box-shadow: none;
+}
+
 /* ---footer--- */
 
 .footer-layout {
@@ -118,7 +123,6 @@ body {
   font-weight: 200;
   margin-top: 50px;
 }
-
 
 .menu-company {
 
@@ -159,11 +163,11 @@ body {
     margin-right: 2px;
     margin-left: 2px;
     text-decoration: none;
-    cursor:pointer;
+    cursor: pointer;
   }
 
   a * {
-    cursor:pointer;
+    cursor: pointer;
   }
 
   a:hover {
@@ -187,7 +191,6 @@ body {
   }
 
 }
-
 
 /* ---Global menu--- */
 /*change language*/
@@ -655,13 +658,6 @@ body {
   }
 }
 
-.company .edit-company button {
-  width: 115px;
-  padding: 5px 15px;
-  margin-left: 25px;
-  margin-right: -15px;
-}
-
 .company {
   h3 {
     color: @color-red-btn;
@@ -1029,15 +1025,6 @@ body {
   }
   .delete-division i {
     margin-top: 12px;
-  }
-}
-
-.form-portal-edit {
-  label {
-    margin-right: 10px;
-  }
-  input {
-    margin-right: 10px;
   }
 }
 
@@ -1486,3 +1473,42 @@ body {
 }
 
 @import "chat.less";
+
+.narrow-wide {
+
+  display: table;
+  width: 100%;
+
+  & > div {
+    width: 100%;
+    display: table-row;
+
+    & > * {
+      display: table-cell;
+      margin: 2px;
+    }
+
+    & > *:first-child {
+      padding-right: 5px;
+      white-space: nowrap;
+      width: 10%;
+      max-width: 50%;
+      text-align: right;
+    }
+
+  }
+
+}
+
+.controller-portal-edit {
+  .form-control {
+    width: 20em;
+    max-width: 20em;
+  }
+  select.form-control {
+    width: 15em;
+  }
+  button.form-control {
+    width: 10em;
+  }
+}
