--- a/profapp/static/css/oles.css
+++ b/profapp/static/css/oles.css
@@ -115,6 +115,18 @@
     height: 100%;
 }
 
+.h1em {
+    height: 1em;
+}
+
+.h05em {
+    height: 0.5em;
+}
+
+.h025em {
+    height: 0.25em;
+}
+
 .h10em {
     height: 10em;
 }
@@ -604,10 +616,6 @@ div.pr-row:last-child div.pr-cell {
 
 .p05em {
     padding: 0.5em;
-}
-
-.p025em {
-    padding: 0.25em;
 }
 
 .pr1em {
