--- a/profapp/static/css/style.css
+++ b/profapp/static/css/style.css
@@ -92,8 +92,8 @@ body {
   border-radius: 3px;
 }
 .border-none {
-  border: none;
-  box-shadow: none;
+  border: none !important;
+  box-shadow: none !important;
 }
 /* ---footer--- */
 .footer-layout {
@@ -714,23 +714,20 @@ body {
   margin-bottom: 50px;
 }
 /*--- VALIDATION ---*/
-.pr-validation-error {
-  border-color: #C70000;
-}
-.pr-validation-warning {
-  border-color: #ffff00;
-}
-.pr-validation-notice {
-  border-color: #C70000;
-}
+.pr-validation-error,
 .pr-validation-error:focus {
   border-color: #C70000;
+  box-shadow: 0 2px 5px 0 rgba(255, 0, 0, 0.5), 0 2px 10px 0 rgba(255, 0, 0, 0.12);
 }
+.pr-validation-warning,
 .pr-validation-warning:focus {
   border-color: #ffff00;
+  box-shadow: 0 2px 5px 0 rgba(150, 150, 0, 0.5), 0 2px 10px 0 rgba(150, 150, 0, 0.12);
 }
+.pr-validation-notice,
 .pr-validation-notice:focus {
   border-color: #C70000;
+  box-shadow: 0 2px 5px 0 rgba(0, 255, 0, 0.5), 0 2px 10px 0 rgba(0, 255, 0, 0.12);
 }
 .error-input {
   color: #CA2027;
@@ -1412,7 +1409,7 @@ body {
 }
 .narrow-wide > div > * {
   display: table-cell;
-  margin: 2px;
+  margin: 0.25em;
 }
 .narrow-wide > div > *:first-child {
   padding-right: 5px;
