--- a/profapp/templates/portal/portal_create.html
+++ b/profapp/templates/portal/portal_create.html
@@ -2,11 +2,16 @@
 {% block title %}Profireader{% endblock title %}
 {% block head %}
     {{ super() }}
-    {% include '_ruslan/partials/_header_files_articles.html' %}
+    {% include '_ruslan/partials/_header_files_sortable.html' %}
     {% include '_ruslan/partials/_header_files_crop.html' %}
 {% endblock head %}
 
 {% block portal_content %}
+
+    {% block company_base %}
+        {% include 'company/company_base_angular.html' %}
+    {% endblock company_base %}
+
     <script>
         module.controller('portal_create', ['$scope', '$uibModal', function ($scope, $uibModal) {
             angularControllerFunction('CompanyMenuController', 'set_selected_company_menu')('home');
@@ -30,6 +35,27 @@
                 $scope.data.portal.divisions.splice(index, 1);
             };
 
+            $scope.sortableOptions = {
+                stop: function (e, ui) {
+                    if ($scope.data_validation.errors && $scope.data_validation.errors.remove_division) {
+                        $scope.data_validation.errors.remove_division = []
+                    }
+                    if ($scope.data_validation.warnings && $scope.data_validation.warnings.remove_division) {
+                        $scope.data_validation.warnings.remove_division = []
+                    }
+                    if ($scope.data_validation.errors && $scope.data_validation.errors.company_subportal) {
+                        $scope.data_validation.errors.company_subportal = []
+                    }
+                    if ($scope.data_validation.warnings && $scope.data_validation.warnings.company_subportal) {
+                        $scope.data_validation.warnings.company_subportal = []
+                    }
+                },
+                'tolerance': 'pointer',
+                containment: "parent",
+                axis: "y",
+                handle: ".fa-arrows-v"
+            };
+
         }]);
     </script>
     {% raw %}
@@ -39,7 +65,7 @@
             <div class="container" af af-after-save="afterSave" af-watch="data.portal" ng-model="data">
                 <div class="row">
                     <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                        <h2>{{ ::_('Creating new portal') }}</h2>
+                        <h2>{{ ::_('Creating portal') }}</h2>
                         <hr/>
                     </div>
                 </div>
@@ -66,7 +92,7 @@
                                               type="radio"/>&nbsp;{{ ::_('Profireader subdomain') }}</label><input
                                     ng-disabled="data.portal.host_profi_or_own !== 'profi'"
                                     class="form-control border-radius"
-                                    ng-style="data.portal.host_profi_or_own !== 'profi'?{'border-color':'gray'}:{}"
+                                    pr-validation-disable="data.portal.host_profi_or_own !== 'profi'"
                                     pr-validation-answer="data_validation:host"
                                     ng-model="data.portal.host_profi"/>
 
@@ -78,6 +104,7 @@
                                 <input
                                         ng-style="data.portal.host_profi_or_own !== 'own'?{'border-color':'gray'}:{}"
                                         ng-disabled="data.portal.host_profi_or_own !== 'own'"
+                                        pr-validation-disable="data.portal.host_profi_or_own !== 'own'"
                                         class="form-control border-radius"
                                         pr-validation-answer="data_validation:host"
                                         ng-model="data.portal.host_own"/>
@@ -85,11 +112,11 @@
                             </div>
                             <div>
                                 <label>{{ ::_('Host') }}</label>
-                                 <a class="form-control border-none oh nowrap" target="_blank"
-                                    ng-href="https://{{ data.portal.host_profi_or_own === 'own'?data.portal.host_own:(data.portal.host_profi + '.' + MAIN_DOMAIN) }}">https://{{
+                                <a class="form-control border-none oh nowrap" target="_blank"
+                                   ng-href="https://{{ data.portal.host_profi_or_own === 'own'?data.portal.host_own:(data.portal.host_profi + '.' + MAIN_DOMAIN) }}">https://{{
                                     data.portal.host_profi_or_own ===
                                     'own'?data.portal.host_own:(data.portal.host_profi + '.' + MAIN_DOMAIN) }}<span
-                                             class="fa fa-external-link pr-external-link"></span></a>
+                                            class="fa fa-external-link pr-external-link"></span></a>
 
                             </div>
                             <div>
@@ -124,6 +151,7 @@
                 {#                    </div>#}
                 {#                </div>#}
                 {% raw %}
+
                 <div class="row">
                     <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 p025em">
                         <label class="form-control border-none pull-right">{{ ::_('Division name') }}</label>
@@ -134,50 +162,65 @@
                     <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3 p025em"></div>
                     <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2 p025em">
                         <button class="pull-right btn btn-success form-control" type="button"
+                                popover-placement="left"
+                                pr-validation-answer="data_validation:add_division"
                                 ng-click="addDivision()"><i class="fa fa-plus"></i> {{ ::_('add division') }}
                         </button>
                     </div>
 
                 </div>
+                <div ui-sortable="sortableOptions" ng-model="data.portal.divisions">
+                    <div class="row"
 
-                <div class="row"
-                     ng-repeat="(division_index, division) in data.portal.divisions">
-                    <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 p025em tar">
-
-
-                            <span style="cursor: row-resize"
-                                  class="fa fa-arrows-v form-control w2em border-none di"></span>
+                         ng-repeat="(division_index, division) in data.portal.divisions">
+                        <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 p025em tar">
+                        <span style="cursor: row-resize"
+                              class="fa fa-arrows-v form-control w2em border-none di"></span>
                             <input class="form-control w20em di"
                                    pr-validation-answer="data_validation:divisions[division_index]"
                                    placeholder="{{ _('Division name placeholder') }}"
                                    ng-model="division.name">
-                    </div>
-                    <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3 p025em">
-                        <select class="form-control pull-right" ng-model="division.portal_division_type_id">
-                            <option ng-selected="division_type.id == division.portal_division_type_id"
-                                    ng-repeat="(division_type_id, division_type) in data.division_types"
-                                    value="{{ division_type_id }}">{{ division_type.id }}
-                            </option>
-                        </select>
-                    </div>
-                    <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3 p025em">
-                        <select class="form-control" ng-if="division.portal_division_type_id == 'company_subportal'"
-                                ng-init="division.settings.company_id = data.portal_company_members[0].id"
-                                ng-model="division.settings.company_id" ng-options="member.id as member.name for member
+                        </div>
+                        <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3 p025em">
+                            <div class="dib border-none pull-right"
+                                 pr-validation-answer="data_validation:remove_division[division_index]">
+                                <select
+                                        popover-trigger="none"
+                                        pr-validation-answer="data_validation:remove_division[division_index]"
+                                        class="form-control" ng-model="division.portal_division_type_id">
+                                    <option ng-selected="division_type.id == division.portal_division_type_id"
+                                            ng-repeat="(division_type_id, division_type) in data.division_types"
+                                            value="{{ division_type_id }}">{{ ::_('option division type
+                                        %(division_type)s',
+                                        {'division_type': division_type.id}) }}
+                                    </option>
+                                </select>
+                            </div>
+                        </div>
+                        <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3 p025em">
+                            <div class="dib border-none"
+                                 pr-validation-answer="data_validation:company_subportal[division_index]"><select
+                                    popover-trigger="none"
+                                    pr-validation-answer="data_validation:company_subportal[division_index]"
+                                    class="form-control" ng-if="division.portal_division_type_id == 'company_subportal'"
+                                    ng-init="division.settings.company_id = data.portal_company_members[0].id"
+                                    ng-model="division.settings.company_id" ng-options="member.id as member.name for member
                             in data.portal_company_members">
-                        </select>
-                        <span af-validation-answer="data_validation:remove_division[division_index]"></span>
-                    </div>
-                    <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2 p025em">
-                        <button ng-click="removeDivision($index)" class="pull-right btn btn-warning form-control"><i
-                                class="fa fa-minus"></i> {{ ::_('remove division') }}
-                        </button>
-                    </div>
+                            </select>
+                            </div>
+                        </div>
+                        <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2 p025em">
+                            <button ng-click="removeDivision($index)" class="pull-right btn btn-warning form-control"><i
+                                    class="fa fa-minus"></i> {{ ::_('remove division') }}
+                            </button>
+                        </div>
 
+                    </div>
                 </div>
                 <div class="row">
+                    <hr/>
                     <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 p025em">
-                        <hr/>
+
                         <button class="btn btn-primary pull-right border-radius w20em" type="button"
                                 ng-click="$af.save(data)" ng-disabled="!$af.isActionAllowed(data, 'save') ">{{
                             ::_('Save new portal') }}
